--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         uses: shrink/actions-document-publish@v1
         id: publish-document
         with:
-          sources: 'primary-role/*.md'
+          sources: 'docs/*.md'
       - if: github.event_name == 'release' && github.event.action == 'published'
         name: Get Release
         id: release
