--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
 
+      - name: Install Pandoc
+        run: |
+          sudo apt-get install -y pandoc
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -38,11 +42,6 @@ jobs:
       - name: Generate JSON version of Resume
         run: |
           python -c "import json; md = open('${{env.resume_path}}/index.md').read(); json.dump({'content': md}, open('${{env.resume_path}}/index.json', 'w'))"
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: Resume-Formats
-          path: positions/
 
       - name: 'Upload Resume and Formats'
         uses: actions/upload-artifact@v4
