--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ on:
     types: [published]
 
 env:
-  resume_path: 'positions'
+  resume_path: '/positions'
   GITHUB_TOKEN: ${{ github.token }}
 
 jobs:
@@ -22,24 +22,20 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
 
-      - name: Install Pandoc
-        run: |
-          sudo apt-get install -y pandoc
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install markdown2 pypandoc
+          pip install markdown2
 
       - name: Convert Markdown to HTML
         run: |
           python -c "import markdown2; html = markdown2.markdown_path('${{env.resume_path}}/index.md'); open('${{env.resume_path}}/resume.html', 'w').write(html)"
 
-      - name: Convert Markdown to PDF
-        run: |
-          pandoc ${{env.resume_path}}/resume.md -o ${{env.resume_path}}/resume.pdf
+      - uses: docker://pandoc/latex:2.9
+        with:
+          args: --output=${{env.resume_path}}/index.pdf ${{env.resume_path}}/index.md
 
-      - name: Generate JSON version of Resume
+      - name: 'Generate JSON version of Resume'
         run: |
           python -c "import json; md = open('${{env.resume_path}}/index.md').read(); json.dump({'content': md}, open('${{env.resume_path}}/index.json', 'w'))"
 
