Fixing the sidebar and styling paths.  NOTE: I removed Poole and consolidated any pertinent styles into hyde.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: 'poole/hyde'
-title: Andrew Barrows Resume
+title: Engineering Manager
 base_url: /
 author:
   name: 'Andrew Barrows'
