--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     # paths:
-    #   - './index.md'
+    #   - './formats/index.md'
   release:
     types: [published]
 
@@ -25,19 +25,19 @@ jobs:
         uses: jaywcjlove/markdown-to-html-cli@main
         with:
           source: ${{env.resume_path}}index.md
-          output: ${{env.resume_path}}index.html
+          output: ${{env.resume_path}}formats/index.html
           github-corners: https://github.com/jaywcjlove/markdown-to-html-cli
           favicon: data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --output=${{env.resume_path}}index.pdf ${{env.resume_path}}index.md
+          args: --output=${{env.resume_path}}formats/index.pdf ${{env.resume_path}}index.md
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --output=${{env.resume_path}}index.docx --reference-doc=${{env.resume_path}}template.docx ${{env.resume_path}}index.md
+          args: --output=${{env.resume_path}}formats/index.docx --reference-doc=${{env.resume_path}}template.docx ${{env.resume_path}}index.md
 
       - name: 'Generate JSON version of Resume'
         run: |
-          python -c "import json; md = open('${{env.resume_path}}index.md').read(); json.dump({'content': md}, open('${{env.resume_path}}index.json', 'w'))"
+          python -c "import json; md = open('${{env.resume_path}}index.md').read(); json.dump({'content': md}, open('${{env.resume_path}}formats/index.json', 'w'))"
 
       # - name: 'Upload Resume and Formats'
       #   uses: actions/upload-artifact@v4
