--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,9 @@ name: Publish Resume Formats
 
 on:
   workflow_dispatch:
-  push:
-    # paths:
-    #   - './formats/index.md'
+  # push:
+  # paths:
+  #   - './formats/index.md'
   release:
     types: [published]
 
