--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
+      - name: Copy Markdown to Formats
+        run: |
+          mkdir -p ${{env.resume_path}}formats
+          cp ${{env.resume_path}}index.md ${{env.resume_path}}formats/index.md
 
       - name: Convert Markdown to HTML
         uses: jaywcjlove/markdown-to-html-cli@main
