--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,9 @@ env:
 jobs:
   publish-formats:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        file: ['index', 'complete']
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -21,36 +24,23 @@ jobs:
       - name: Copy Markdown to Formats
         run: |
           mkdir -p ${{env.resume_path}}formats
-          cp ${{env.resume_path}}index.md ${{env.resume_path}}formats/index.md
-
+          cp ${{env.resume_path}}${{ matrix.file }}.md ${{env.resume_path}}formats/${{ matrix.file }}.md
       - name: Convert Markdown to HTML
         uses: jaywcjlove/markdown-to-html-cli@main
         with:
-          source: ${{env.resume_path}}index.md
-          output: ${{env.resume_path}}formats/index.html
+          source: ${{env.resume_path}}${{ matrix.file }}.md
+          output: ${{env.resume_path}}formats/${{ matrix.file }}.html
           github-corners: https://github.com/jaywcjlove/markdown-to-html-cli
           favicon: data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --output=${{env.resume_path}}formats/index.pdf ${{env.resume_path}}index.md --variable geometry:margin=1in ${{env.resume_path}}index.md
+          args: --output=${{env.resume_path}}formats/${{ matrix.file }}.pdf ${{env.resume_path}}${{ matrix.file }}.md --variable geometry:margin=1in ${{env.resume_path}}${{ matrix.file }}.md
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --output=${{env.resume_path}}formats/index.docx --reference-doc=${{env.resume_path}}template.docx ${{env.resume_path}}index.md --variable geometry:margin=1in ${{env.resume_path}}index.md
-
+          args: --output=${{env.resume_path}}formats/${{ matrix.file }}.docx --reference-doc=${{env.resume_path}}template.docx ${{env.resume_path}}${{ matrix.file }}.md --variable geometry:margin=1in ${{env.resume_path}}${{ matrix.file }}.md
       - name: 'Generate JSON version of Resume'
         run: |
-          python -c "import json; md = open('${{env.resume_path}}index.md').read(); json.dump({'content': md}, open('${{env.resume_path}}formats/index.json', 'w'))"
-
-      # - name: 'Upload Resume and Formats'
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: resume-formats
-      #     path: |
-      #       ${{ env.resume_path }}index.pdf
-      #       ${{ env.resume_path }}index.docx
-      #       ${{ env.resume_path }}index.html
-      #       ${{ env.resume_path }}index.json
-      #       ${{ env.resume_path }}index.md
+          python -c "import json; md = open('${{env.resume_path}}${{ matrix.file }}.md').read(); json.dump({'content': md}, open('${{env.resume_path}}formats/${{ matrix.file }}.json', 'w'))"
       - name: 'Commit Resume in Various Formats'
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
