--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
           favicon: data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --output=${{env.resume_path}}formats/${{ matrix.file }}.pdf ${{env.resume_path}}${{ matrix.file }}.md --variable geometry:margin=.75in ${{env.resume_path}}${{ matrix.file }}.md
+          args: --output=${{env.resume_path}}formats/${{ matrix.file }}.pdf --variable geometry:margin=.75in ${{env.resume_path}}${{ matrix.file }}.md
       - uses: docker://pandoc/latex:2.9
         with:
           args: --output=${{env.resume_path}}formats/${{ matrix.file }}.docx --reference-doc=${{env.resume_path}}template.docx --variable geometry:margin=.75in ${{env.resume_path}}${{ matrix.file }}.md
